test/files/neg/t2870.check
t2870.scala:1: error: not found: type Jar
class Jars(jar: Jar)
                ^
t2870.scala:4: error: encountered unrecoverable cycle resolving import.
Note: this is often due in part to a class depending on a definition nested within its companion.
If applicable, you may wish to try moving some members into another object.
  import scala.util.Properties.javaClassPath
                    ^
two errors found
